RESOLVED FIXED125012
Fix build warning in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=125012
Summary Fix build warning in WebKit2
Tibor Mészáros
Reported 2013-11-29 06:54:44 PST
There are some unused parameter warning in WebKit2 during building.
Attachments
Patch (4.01 KB, patch)
2013-11-29 06:55 PST, Tibor Mészáros
no flags
Patch v2 (4.03 KB, patch)
2013-11-29 07:00 PST, Tibor Mészáros
no flags
Patch v3 (4.05 KB, patch)
2013-11-29 08:20 PST, Tibor Mészáros
no flags
Tibor Mészáros
Comment 1 2013-11-29 06:55:17 PST
Created attachment 218059 [details] Patch fix unused parameter warnings
Tibor Mészáros
Comment 2 2013-11-29 07:00:56 PST
Created attachment 218061 [details] Patch v2 Missed the bugzilla link from the previous patch.
Csaba Osztrogonác
Comment 3 2013-11-29 07:49:28 PST
Comment on attachment 218061 [details] Patch v2 View in context: https://bugs.webkit.org/attachment.cgi?id=218061&action=review > Source/WebKit2/Shared/API/c/WKDeprecatedFunctions.cpp:42 > + UNUSED_PARAM(array); You can simple remove the name of the parameter as you did it in Source/WebKit2/Platform/gtk/WorkQueueGtk.cpp > Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:1390 > + UNUSED_PARAM(pluginSize); > + UNUSED_PARAM(appletElement); > + UNUSED_PARAM(paramNames); > + UNUSED_PARAM(paramValues); URL is unused too.
Tibor Mészáros
Comment 4 2013-11-29 08:20:12 PST
Created attachment 218067 [details] Patch v3 As you mentioned, I take these changes on previous patch.
Csaba Osztrogonác
Comment 5 2013-11-29 08:21:31 PST
(In reply to comment #3) > URL is unused too. Ah, it isn't a parameter name.
Csaba Osztrogonác
Comment 6 2013-11-29 08:27:10 PST
Comment on attachment 218067 [details] Patch v3 LGTM, but it needs WK2 owner review.
WebKit Commit Bot
Comment 7 2013-11-29 20:11:05 PST
Comment on attachment 218067 [details] Patch v3 Clearing flags on attachment: 218067 Committed r159882: <http://trac.webkit.org/changeset/159882>
WebKit Commit Bot
Comment 8 2013-11-29 20:11:09 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.