Fix build warnings in WebKit2 https://bugs.webkit.org/show_bug.cgi?id=125012

Patch by Tibor Meszaros <mtibor@inf.u-szeged.hu> on 2013-11-29
Reviewed by Anders Carlsson.

fix unused parameter warnings in the following files:

* Platform/gtk/WorkQueueGtk.cpp:
(WorkQueue::SocketEventSource::eventCallback):
* Shared/API/c/WKDeprecatedFunctions.cpp:
(WKArrayIsMutable):
* WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::unavailablePluginButtonClicked):
(WebKit::WebChromeClient::didAddHeaderLayer):
(WebKit::WebChromeClient::didAddFooterLayer):
* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::createJavaAppletWidget):

Canonical link: https://commits.webkit.org/143133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159882 268f45cc-cd09-0410-ab3c-d52691b4dbfc